# notes

apache-mod_rewrite/: README.md
cmake-note/InterfaceTest/: CMakeLists.txt
cmake-note/InterfaceTest/exeTest/: CMakeLists.txt
cmake-note/InterfaceTest/exeTest/src/: source.cpp
cmake-note/InterfaceTest/libFack/: CMakeLists.txt
cmake-note/InterfaceTest/libFack/include/: fake.h
cmake-note/InterfaceTest/libFack/src/: fake.cpp
cmake-note/InterfaceTest/libTest/: CMakeLists.txt
cmake-note/InterfaceTest/libTest/include/: games.h
cmake-note/Wolverin/: CMakeLists.txt
cmake-note/Wolverin/Runner/: CMakeLists.txt  Runner.cpp
cmake-note/Wolverin/X-Man/: CMakeLists.txt
cmake-note/Wolverin/X-Man/include/: XTeam.h
cmake-note/Wolverin/X-Man/src/: XTeam.cpp
cmake-note/libs/create_lib/: CMakeLists.txt
cmake-note/libs/create_lib/src/: Student.cpp
cmake-note/libs/use_lib/: CMakeLists.txt  main.cpp
cpp-note/GTestRun/: CMakeLists.txt
cpp-note/GTestRun/GRun/: CMakeLists.txt
cpp-note/GTestRun/GRun/include/: Core.h  onEvCore.h  oneEv.h
cpp-note/GTestRun/GRun/src/: onEvCore.cpp  oneEv.cpp
cpp-note/GTestRun/GRunTests/: CMakeLists.txt  gone.h  test.cpp
cpp-note/GTestRun/GRunTests/basic_tests/: CMakeLists.txt  basic_check.cpp
cpp-note/Vector/: CMakeLists.txt
cpp-note/Vector/Values/: CMakeLists.txt
cpp-note/Vector/Values/src/: main.cpp
cpp-note/include_headers_each_other/: CMakeLists.txt  buildVSPro.bat
cpp-note/include_headers_each_other/include/spdlog/fmt/bundled/: format.h
cpp-note/include_headers_each_other/src/: Core.h  Log.cpp  Log.h  evEmiter.cpp  evEmiter.h  eventHandler.cpp  eventHandler.h  main.cpp
csharp-note/: global hot key in c#.cs
csharp-note/funcPointDelegatePsToC/: ConsoleApp1.sln
csharp-note/funcPointDelegatePsToC/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
csharp-note/funcPointDelegatePsToC/ConsoleApp1/Properties/: AssemblyInfo.cs
csharp-note/funcPointDelegatePsToC/Project1/: CMakeLists.txt  Project1.vcxproj  Source.cpp
csharp-note/funcPointDelegatePsToC/chtest/: CMakeLists.txt  Source.cpp  chtest.vcxproj
csharp-note/ipc/: simple version.cs  somefun.cs
django-note/: README.md
golang-notes/: README.md
gradle-note/: README.md  build.gradle
python/pillow/: README.md
regex-note/: README.md  main.py
win_native/: CMakeLists.txt  detect_keyboard.cpp  detect_mouse.cpp  main.cpp  simulate_keypress.cpp  volume.cpp  win_eventloop.cpp
win_native/EventObject/: EventObject.txt
win_native/EventObject/get_event/: CMakeLists.txt  main.cpp
win_native/EventObject/set_event/: CMakeLists.txt  main.cpp
win_native/cppNamedPipe/CClient/: CMakeLists.txt  main.cpp
win_native/cppNamedPipe/CServer/: CMakeLists.txt  main.cpp
(+1 files in other folders)
